# t3-chat-clone

./: .gitignore  CLAUDE.md  LICENSE  README.md  backend.workspace  branching.md  docs_plan.md  migration.md  package-lock.json  refactor.md  test_auth.js
backend/: .env.template  PHASE1_DEPLOYMENT.md  account_demo.txt  description.md  env.example  frontend_backend_mismatch_fixes.md  main.py  phase1_optimization_indexes.sql  plan.md  pyproject.toml  refactor.md  t3-chat-backend.service  test_openrouter_service.py  test_optimization.py  test_per_message_tools.py  test_streaming_agent.py  test_streaming_realtime.py
backend/app/: main.py
backend/app/api/: __init__.py  conversations.py  documents.py  health.py  messages.py  models.py  tools.py  user.py
backend/app/core/: config.py
backend/app/dependencies/: auth.py  repositories.py
backend/app/infrastructure/: database.py  openrouter.py  supabase.py
backend/app/mcp/: __init__.py  base.py
backend/app/mcp_clients/: __init__.py  base.py
backend/app/models/: __init__.py  conversation.py  message.py  profile.py
backend/app/schemas/: __init__.py  conversation.py  document.py  message.py  profile.py
backend/app/services/: __init__.py  conversation_service.py  document_service.py  message_service.py  openrouter_service.py  profile_service.py  streaming_service.py  text_extraction.py  tool_service.py
backend/app/types/: __init__.py  database.py
backend/migrations/: add_tools_to_conversations.sql  revert_conversations_tools.sql
backend/tests/: test_complete_agent.py  test_openrouter_direct.py
(+79 files in other folders)
